--- a/Lab1/src/main/resources/application.properties
+++ b/Lab1/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/BLPS
 spring.datasource.username=postgres
-spring.datasource.password=Tylpa31
+spring.datasource.password={password}
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
 
