--- a/Lab1/src/main/resources/application.properties
+++ b/Lab1/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/BLPS
-spring.datasource.username=postgres
-spring.datasource.password={password}
+spring.datasource.url=jdbc:postgresql://pg:5432/studs
+spring.datasource.username=s333887
+spring.datasource.password=hwJ34ZWIKndQZKtb
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=nav461
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
 
