--- a/Lab1/pom.xml
+++ b/Lab1/pom.xml
@@ -49,6 +49,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jta-bitronix</artifactId>
+            <version>2.4.13</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
