--- a/BookingService/pom.xml
+++ b/BookingService/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>Lab1</artifactId>
+    <artifactId>BookingService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Lab1</name>
     <description>Lab1</description>
