--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.open-in-view=false
 
 server.port=8081
 logging.level.org.springframework.security=debug
+spring.rabbitmq.addresses = localhost:5672
