--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=email-service
 server.port = 9000
 spring.rabbitmq.addresses = localhost:5672
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= ivanmorikov48@gmail.com
+spring.mail.password= Vano3811.
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
