--- a/BankingService/src/main/resources/application.properties
+++ b/BankingService/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=demo
+#spring.application.name=demo
+
+spring.datasource.username=postgres
+spring.datasource.password=Tylpa31
+spring.datasource.url=jdbc:postgresql://localhost:5432/BLPS2
+
+spring.jpa.generate-ddl=true
+
+server.port=8082
