--- a/BookingService/pom.xml
+++ b/BookingService/pom.xml
@@ -58,7 +58,6 @@
             <version>2.4.13</version>
         </dependency>
         <dependency>
-<<<<<<< Updated upstream
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>3.2.4</version>
@@ -87,11 +86,11 @@
             <version>2.0.0</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-web-api</artifactId>
             <version>9.1.0</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
