--- a/BookingService/pom.xml
+++ b/BookingService/pom.xml
@@ -86,11 +86,19 @@
             <version>2.0.0</version>
         </dependency>
 
-<!--        <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-web-api</artifactId>
-            <version>9.1.0</version>
-        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
+
+        <!--        <dependency>
+                    <groupId>jakarta.platform</groupId>
+                    <artifactId>jakarta.jakartaee-web-api</artifactId>
+                    <version>9.1.0</version>
+                </dependency>-->
 
     </dependencies>
 
