--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.datasource.url=jdbc:postgresql://pg:5432/studs
 spring.datasource.username=postgres
-spring.datasource.password=Tylpa31
+spring.datasource.password=nav461
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=nav461
