--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=email-service
 server.port = 9000
 spring.rabbitmq.addresses = localhost:5672
+
+spring.datasource.username=postgres
+spring.datasource.password=nav461
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+
+spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=false
