--- a/BookingService/pom.xml
+++ b/BookingService/pom.xml
@@ -24,6 +24,16 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.camunda.bpm.springboot</groupId>
+            <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
+            <version>7.15.0</version>
+        </dependency>
+        <dependency>
+        <groupId>org.camunda.bpm.springboot</groupId>
+            <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
+            <version>7.15.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
