--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.datasource.url=jdbc:postgresql://pg:5432/studs
-spring.datasource.username=postgres
-spring.datasource.password=nav461
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=nav461
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Tylpa31
 
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
